# sustainalytics-wasm-fdw

./: .gitignore  Cargo.toml  README.md  release.yml
.github/workflows/: release_wasm_fdw.yml
src/: lib.rs
wit/: world.wit
