[package]
name = "sustainalytics_wasm_fdw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2"
supabase-wrappers = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[package.metadata.component]
package = "smowry:sustainalytics-fdw"

[package.metadata.component.target]
path = "wit"
world = "sustainalytics-fdw"
